syntax = "proto3";

package pkg.fy.science.jobs;

import "google/protobuf/timestamp.proto";

option go_package = "pkg.fy.science/internal/proto/jobs;pbjobs";

service Jobs {
  rpc GetJobs(GetJobsReq) returns (GetJobsRes) {}
  rpc CountJobs(CountJobsReq) returns (CountJobsRes) {}
  rpc CreateJobs(CreateJobsReq) returns (CreateJobsRes) {}
}

message GetJobsReq {
  repeated string company_ids = 1;
  uint32 skip = 2;
  uint32 take = 3;
}
message GetJobsRes {
  repeated Job jobs = 1;
}

message CountJobsReq {
  repeated string company_ids = 1;
}

message CountJobsRes {
  uint32 total = 1;
}

message CreateJobsReq {
  repeated CreateJobData jobs = 1;
}

message CreateJobData {
  string title = 1;
  string description = 2;
  string url = 3;
  string company_id = 4;
  string location = 5;
  google.protobuf.Timestamp posted_at = 6;
}

message CreateJobsRes {}

message Job {
  string title = 1;
  string description = 2;
  string url = 3;
  string company_id = 4;
  string location = 5;
  google.protobuf.Timestamp posted_at = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}